fix book title text overflow

--- a/style/_card.scss
+++ b/style/_card.scss
@@ -40,6 +40,8 @@
 
         span {
             font-size: 1.5rem;
+            text-overflow: ellipsis;
+            overflow: hidden;
         }
     }
 }
